# OrderBookDataCollector

./: .gitignore  CMakeLists.txt  README.md
Common/: Configuration.h  IDataFeed.h  IDataFeedContext.h  IStorage.h  Library.h  OrderBook.h
DataFeeds/Binance/: BinanceDataFeed.cpp  BinanceDataFeed.h  CMakeLists.txt
Platform/: CMakeLists.txt  PlatformService.cpp  PlatformService.h
Platform/DataFeeds/: DataFeedContext.h
Start/: CMakeLists.txt  Configuration.h  Platform.cpp  Platform.h  configuration.json  main.cpp
Start/DataFeeds/: DataFeedContext.h
Start/Services/: DataFeedModule.h  StorageModule.h
Storages/MongoDB/: CMakeLists.txt  MongoDBStorage.cpp  MongoDBStorage.h
Storages/Redis/: CMakeLists.txt  RedisStorage.cpp  RedisStorage.h
Tests/CommonTest/: CMakeLists.txt  OrderBookTest.cpp
Tests/DataFeeds/BinanceTest/: BinanceTest.cpp  CMakeLists.txt  DataFeedContextMock.h
Tests/PlatformTest/: CMakeLists.txt  PlatformServiceTest.cpp
Tests/PlatformTest/Mock/: DataFeedMockA.h  DataFeedMockB.h  StorageMockA.h  StorageMockB.h
Tests/PlatformTest/Services/: DataFeedModule.h  StorageModule.h
Tests/Storages/MongoDBStorageTest/: CMakeLists.txt  MongoDBStorageTest.cpp
Tests/Storages/RedisStorageTest/: CMakeLists.txt  RedisStorageTest.cpp
